# blackout-city

./: .gitignore  BLOG.md  Dockerfile  README.md  V2_Training_Pipeline.ipynb  client.py  dataset.jsonl  inference.py  models.py  openenv.yaml  pyproject.toml  reward_tracker.py  run_on_hf.sh  train_colab.md
artifacts/: .gitkeep
blackstart_city/: AGENT_TIER_INTEGRATION.md  __init__.py  agent_tier.py  baseline.py  command_center.py  env.py  env_tier_patch.py  grading.py  models.py  task_graders.py  tier_grading.py  tier_router.py
blackstart_city.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
blackstart_city/tasks/: __init__.py  catalog.py  scenarios.py
blackstart_city/training/: __init__.py  augment_dataset.py  build_dataset.py  eval.py  grpo_train.py  model_utils.py  policy.py  rl_train.py  trl_train.py  validate_submission.py
docs/: demo_runbook.md  hf_mini_blog.md  pitch_script.md  video_script.md
notebooks/: agent_demo.ipynb  blackstart_city_training_colab.ipynb  grpo_from_sft.ipynb
server/: __init__.py  app.py  web_ui.py
tests/: test_env.py
