[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackstart-city"
version = "0.1.0"
description = "OpenEnv benchmark for city-scale cascading blackout recovery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "openenv-core>=0.2.3",
  "pydantic>=2.8.0",
  "requests>=2.32.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]
train = [
  "datasets>=2.20.0",
  "transformers>=4.44.0",
  "trl>=0.10.1",
]

[project.scripts]
server = "server.app:main"
blackstart-city-server = "server.app:main"

[tool.setuptools.packages.find]
include = ["blackstart_city*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
