[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackstart-city"
version = "0.1.0"
description = "OpenEnv benchmark for city-scale cascading blackout recovery"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "openenv-core>=0.2.3",
  "pydantic>=2.8.0",
  "requests>=2.32.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]
train = [
  "datasets>=2.20.0,<3.0.0",
  "peft>=0.13.0,<0.15.0",
  "accelerate>=0.34.0,<0.35.0",
  "transformers>=4.47.0,<4.49.0",
  "trl>=0.12.0,<0.13.0",
  "unsloth[colab-new]>=2025.3.0,<2025.4.0",
  "safetensors>=0.4.0",
  "protobuf<4.0.0",
  "matplotlib>=3.9.0",
  "numpy>=1.26.0",
  "rich>=13.0.0",
]

[project.scripts]
server = "server.app:main"
blackstart-city-server = "server.app:main"

[tool.setuptools.packages.find]
include = ["blackstart_city*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
